<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.OrderActivity">

    <LinearLayout
        android:id="@+id/order_form_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:id="@+id/form_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_name_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/name_for_order" />

            <TextView
                android:id="@+id/name_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_fIrst_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_name_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/first_and_last_name" />

            <TextView
                android:id="@+id/name_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_adress_client"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_adress_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:inputType="textPersonName"
                android:text="@string/adress_of_client" />

            <TextView
                android:id="@+id/adress_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_call"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/call_operators_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:onClick="CallOperator"
                android:text="@string/call_operators"
                android:textStyle="bold" />

            <Button
                android:id="@+id/call_client_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:onClick="CallClient"
                android:text="@string/call_client_button"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_order_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/show_map_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:onClick="showMapClick"
                android:text="@string/show_way"
                android:textStyle="bold" />

            <Button
                android:id="@+id/at_client_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:onClick="SetStatusAtClient"
                android:text="@string/at_client_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/complete_order_buttton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:onClick="SetStatusCompleteOrder"
                android:text="@string/complete_order_buttton"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>