<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.WaitingActivity">

    <LinearLayout
        android:id="@+id/waiting_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/waiting_form_go_leave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/leave_work_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="changeOnShiftClick"
                android:text="@string/to_leave_work"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/go_to_work_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="changeOnShiftClick"
                android:text="@string/to_go_to_work"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/call_operators_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="CallOperator"
            android:text="@string/call_operators"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>